--- a/index.html
+++ b/index.html
@@ -842,8 +842,8 @@
 	          </div>
           </div> -->
         </div>
-		
-        <div class="row no-gutters block-9">
+		<!-- contact form -->
+        <!-- <div class="row no-gutters block-9">
           <div class="col-md-6 order-md-last d-flex">
             <form action="#" class="bg-light p-4 p-md-5 contact-form" id="contact-form">
               <div class="form-group">
@@ -868,7 +868,7 @@
           <div class="col-md-6 d-flex">
           	<div class="img" style="background-image: url(images/about.jpg);"></div>
           </div>
-        </div>
+        </div> -->
       </div>
     </section>
 		
