--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
           </div>
         </div>
       </div>
-      <div class="mouse">
+      <!-- <div class="mouse">
 				<a href="#" class="mouse-icon">
 					<div class="mouse-wheel"><span class="ion-ios-arrow-round-down"></span></div>
 				</a>
-			</div>
+			</div> -->
     </section>
 
     <section class="ftco-about img ftco-section ftco-no-pt ftco-no-pb" id="about-section">
@@ -594,9 +594,110 @@
 				</div>
     	</div>
     </section> -->
- 
-	<!-- project section -->
-    <section class="ftco-section ftco-project" id="projects-section">
+	<!-- new project section -->
+	<!-- ******************************************************* -->
+	<section class="ftco-section ftco-project" id="projects-section">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-12 heading-section text-center ftco-animate">
+					<h1 class="big big-2">Projects</h1>
+				  <h2 class="mb-4">Projects</h2>
+				  <p>you can review source code after clicking each of them</p>
+				</div>
+				<div class="col-md-3">
+				    <nav id="navi">
+					    <ul>
+					      <li><a href="#page-5">stream mining</a></li>
+					      <li><a href="#page-6">NLP</a></li>
+					      <li><a href="#page-7">computer vision</a></li>
+					      <li><a href="#page-8">machine learnins</a></li>
+					    </ul>
+					  </nav>
+					</div>
+					<div class="col-md-9">
+						<!-- page 5 - stream mining -->
+						<div id="page-5" class= "page five">
+							<h2 class="heading">stream mining</h2>
+							<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/anomalies.png);">
+								<div class="overlay"></div>
+								<div class="text text-center p-4">
+									<h3><a href="https://github.com/gurokeretcha/Anomaly-detection-using-k-means-in-streaming">Anomaly Detection using k-means</a></h3>
+									<span>Data Stream mining</span>
+								</div>
+							</div>
+							<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/anomalies.png);">
+								<div class="overlay"></div>
+								<div class="text text-center p-4">
+									<h3><a href="https://github.com/gurokeretcha/Anomaly-detection-using-k-means-in-streaming">Anomaly Detection using k-means</a></h3>
+									<span>Data Stream mining</span>
+								</div>
+							</div>
+
+							
+						</div>
+
+						<!-- page 2 NLP-->
+						<div id="page-6" class= "page six">
+							<h2 class="heading">NLP</h2>
+							<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/anomalies.png);">
+								<div class="overlay"></div>
+								<div class="text text-center p-4">
+									<h3><a href="https://github.com/gurokeretcha/Anomaly-detection-using-k-means-in-streaming">Anomaly Detection using k-means</a></h3>
+									<span>Data Stream mining</span>
+								</div>
+							</div>
+							<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/anomalies.png);">
+								<div class="overlay"></div>
+								<div class="text text-center p-4">
+									<h3><a href="https://github.com/gurokeretcha/Anomaly-detection-using-k-means-in-streaming">Anomaly Detection using k-means</a></h3>
+									<span>Data Stream mining</span>
+								</div>
+							</div>
+						</div>
+						<!-- page 3 computer vision -->
+						<div id="page-7" class= "page seven">
+							<h2 class="heading">Computer vision</h2>
+							<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/anomalies.png);">
+								<div class="overlay"></div>
+								<div class="text text-center p-4">
+									<h3><a href="https://github.com/gurokeretcha/Anomaly-detection-using-k-means-in-streaming">Anomaly Detection using k-means</a></h3>
+									<span>Data Stream mining</span>
+								</div>
+							</div>
+							<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/anomalies.png);">
+								<div class="overlay"></div>
+								<div class="text text-center p-4">
+									<h3><a href="https://github.com/gurokeretcha/Anomaly-detection-using-k-means-in-streaming">Anomaly Detection using k-means</a></h3>
+									<span>Data Stream mining</span>
+								</div>
+							</div>
+						</div>
+						<!-- page 4 machine learnins-->
+						<div id="page-8" class= "page eight">
+							<h2 class="heading">machine learnings</h2>
+							<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/anomalies.png);">
+								<div class="overlay"></div>
+								<div class="text text-center p-4">
+									<h3><a href="https://github.com/gurokeretcha/Anomaly-detection-using-k-means-in-streaming">Anomaly Detection using k-means</a></h3>
+									<span>Data Stream mining</span>
+								</div>
+							</div>
+							<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/anomalies.png);">
+								<div class="overlay"></div>
+								<div class="text text-center p-4">
+									<h3><a href="https://github.com/gurokeretcha/Anomaly-detection-using-k-means-in-streaming">Anomaly Detection using k-means</a></h3>
+									<span>Data Stream mining</span>
+								</div>
+							</div>
+						</div>
+
+					</div>
+			</div>
+		</div>
+	</section>
+	<!-- ******************************************************* -->
+	<!-- old project section -->
+    <!-- <section class="ftco-section ftco-project" id="projects-section">
     	<div class="container-fluid px-md-0">
     		<div class="row no-gutters justify-content-center pb-5">
           <div class="col-md-12 heading-section text-center ftco-animate">
@@ -663,7 +764,7 @@
     			</div>
     		</div>
     	</div>
-    </section>
+    </section> -->
 
 	<!-- section after project -->
     <!-- <section class="ftco-section ftco-no-pt ftco-no-pb ftco-counter img" id="section-counter">
