add project about classification in streaming

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 								  <span
 								     class="txt-rotate"
 								     data-period="2000"
-								     data-rotate='[ "Data Scientist.", "ML engineer"]'></span>
+								     data-rotate='[ "Data Scientist.", "ML engineer."]'></span>
 								</h2>
 							</div>
             </div>
@@ -625,10 +625,10 @@
 									<span>Data Stream mining</span>
 								</div>
 							</div>
-							<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/anomalies.png);">
+							<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/classification\ in\ streaming.png);">
 								<div class="overlay"></div>
 								<div class="text text-center p-4">
-									<h3><a href="https://github.com/gurokeretcha/Anomaly-detection-using-k-means-in-streaming">Anomaly Detection using k-means</a></h3>
+									<h3><a href="https://github.com/gurokeretcha/Classification-in-Data-Streaming">Classification in Data Streaming</a></h3>
 									<span>Data Stream mining</span>
 								</div>
 							</div>
