updated portfolio 21 may 2023

--- a/index.html
+++ b/index.html
@@ -88,17 +88,14 @@
 						<div class="col-md-12 heading-section ftco-animate">
 							<h1 class="big">About</h1>
 							<h2 class="mb-4">About Me</h2>
-							<p>I am highly motivated AI master 2 student from École Polytechnique and Télécom Paris (IP
-								Paris).
-								Google-certified TensorFlow developer with more than 2 years of working experience in
-								data science. Looking for a research internship in the computer vision and NLP field.
+							<p>I am an AI engineer with more than three years of working experience specializing in computer vision, NLP, and recommender systems. I am also a Google-certified TensorFlow developer. I have a master's degree in AI from IP Paris, one of the highest-ranked universities in the world. I love teaching and sharing knowledge with others. You can follow me on Medium 😇
 							</p>
 							<ul class="about-info mt-4 px-md-0 px-2">
 								<li class="d-flex"><span>Name:</span> <span>Gurami Keretchashvili</span></li>
 								<li class="d-flex"><span>Date of birth:</span> <span>April 11, 1998</span></li>
 								<li class="d-flex"><span>Address:</span> <span>Paris, France</span></li>
 								<!-- <li class="d-flex"><span>Zip code:</span> <span>1000</span></li> -->
-								<li class="d-flex"><span>Email:</span> <span>gkeretch@ip-paris.fr</span></li>
+								<li class="d-flex"><span>Email:</span> <span>g.keretchashvili@gmail.com</span></li>
 								<li class="d-flex"><span>Phone: </span> <span>+33(0)7 66 11 25 43</span></li>
 							</ul>
 						</div>
@@ -110,8 +107,8 @@
 								<span>Project complete</span>
 							</p>
 							<p><a target='blank'
-									href="https://drive.google.com/drive/u/0/folders/1yEcDIdA-xQvy42mAlZAzE6Gsi6x_GOmz"
-									class="btn btn-primary py-3 px-3">Download CV</a></p>
+									href="https://drive.google.com/file/d/1GVl07TWi-m0hyNcBw1KRX0uIOzsUxBPY/view?usp=sharing"
+									class="btn btn-primary py-3 px-3">Download My Resume</a></p>
 						</div>
 					</div>
 				</div>
@@ -162,10 +159,11 @@
 								<span class="flaticon-ideas"></span>
 							</div>
 							<div class="text pl-3">
-								<span class="date">2020 - Present</span>
-								<h2>Master 2 student in Data science and AI</h2>
+								<span class="date">2020 - 2022</span>
+								<h2>Master of Science in Artificial Intelligence</h2>
 								<span class="position">Institut Polytechnique de Paris</span>
-								<p> - GPA: 14.1/20</p>
+								<p> - GPA: 14.5/20 (Grade: A)</p>
+								<p> - Master Thesis: Borehole Sonic Data Classification.</p>
 								<p> - One of the top 50 universities in the world.</p>
 							</div>
 						</div>
@@ -219,11 +217,34 @@
 								<span class="flaticon-ideas"></span>
 							</div>
 							<div class="text pl-3">
-								<span class="date">Sep 2019 - Present</span>
+								<span class="date">Jan 2023 - Present</span>
+								<h2>AI Engineer</h2>
+								<span class="position">SLB</span>
+							</div>
+						</div>
+
+						<div class="resume-wrap d-flex ftco-animate">
+							<div class="icon d-flex align-items-center justify-content-center">
+								<span class="flaticon-ideas"></span>
+							</div>
+							<div class="text pl-3">
+								<span class="date">Mar 2022 - Sept 2022</span>
+								<h2>AI Researcher intern</h2>
+								<span class="position">Veon</span>
+								<p>- Master Thesis: Borehole Sonic Data Classification
+								</p>
+							</div>
+						</div>						
+						<div class="resume-wrap d-flex ftco-animate">
+							<div class="icon d-flex align-items-center justify-content-center">
+								<span class="flaticon-ideas"></span>
+							</div>
+							<div class="text pl-3">
+								<span class="date">Sep 2019 - Jan 2022</span>
 								<h2>Data Scientist</h2>
 								<span class="position">Veon</span>
-								<p>- Creating ML models and data visualizations
-									<br>- Developing and advising data-driven solutions
+								<p>- Created predictive models and data visualizations.
+									<br>- Developed and advised data-driven solutions.
 								</p>
 							</div>
 						</div>
@@ -233,12 +254,12 @@
 								<span class="flaticon-ideas"></span>
 							</div>
 							<div class="text pl-3">
-								<span class="date">Jan 2019 - Jun 2020</span>
+								<span class="date">Jan 2019 - Feb 2020</span>
 								<h2>Teaching Assistant in Embedded System Programming</h2>
 								<span class="position">San Diego State University</span>
 								<p>
-									- Assisted undergraduate students to do their laboratories.
-									<br>- Laboratories included AVR/ARM microcontrollers programming using C
+									- Assisted Undergraduate students with their Laboratories
+									<br>- Involved AVR/ARM microcontrollers programming Using C
 								</p>
 							</div>
 						</div>
@@ -250,9 +271,9 @@
 							<div class="text pl-3">
 								<span class="date">Jul 2018 - Aug 2018</span>
 								<h2>Team Leader</h2>
-								<span class="position">Youth Agency</span>
-								<p>- A leader of up to 25 students from the age of 15 to 22 in a summer camp.
-									<br> - Helped to organize summer camp activities.
+								<span class="position">Youth Agency of Georgia</span>
+								<p>- A leader of up to 25 students from the age of 15 to 22 in a summer camp
+									<br> - Helped to organize summer camp activities
 								</p>
 							</div>
 						</div>
@@ -264,10 +285,8 @@
 								<span class="date">Oct 2016 - Jun 2018</span>
 								<h2>Mathematics & Physics Teacher</h2>
 								<span class="position">Auditoria #1</span>
-								<p>- Prepared up to 80 high school students in Mathematics and Physics for their final
-									exam
-									at school.
-									<br> - All my students passed their exams successfully.
+								<p>- Prepared up to 80 high school students in Mathematics and Physics for their final exam.
+									<br> - All my students passed their exams successfully
 								</p>
 							</div>
 						</div>
@@ -279,7 +298,7 @@
 								<span class="date">Feb 2017 - Mar 2017</span>
 								<h2>Physics Problem Writer</h2>
 								<span class="position">murtsku.com</span>
-								<p>- Created up to 100 physics problems for high school students.
+								<p>- Created up to 100 physics problems for high school students
 									<br> - These problems help students to prepare for their national exams
 								</p>
 							</div>
@@ -340,13 +359,44 @@
 								<span class="flaticon-ideas"></span>
 							</div>
 							<div class="text pl-3">
+								<span class="date">Feb 2023</span>
+								<h2>Winner of Data Challenge (Georgian Kaggle) - NLP (Team: Synapse NLP)</h2>
+								<span class="position">Bank of Georgia</span>
+								<p>
+									• 3nd place out of more than 100 teams. 
+									<br>• Created sentiment analysis classifier using SOTA deep learning algorithms.
+									<br> <a href="https://fintech.ge/%E1%83%A0%E1%83%9D%E1%83%92%E1%83%9D%E1%83%A0-%E1%83%93%E1%83%90%E1%83%A1%E1%83%A0%E1%83%A3%E1%83%9A%E1%83%93%E1%83%90-data-challenge-%E1%83%A1-%E1%83%9B%E1%83%94%E1%83%9D%E1%83%A0%E1%83%94-%E1%83%A1/">Article</a>
+								</p>
+							</div>
+						</div>
+						<div class="resume-wrap d-flex ftco-animate">
+							<div class="icon d-flex align-items-center justify-content-center">
+								<span class="flaticon-ideas"></span>
+							</div>
+							<div class="text pl-3">
+								<span class="date">May 2022</span>
+								<h2>Winner of Data Challenge (Georgian Kaggle) - Recommender System (Team: Synapse)</h2>
+								<span class="position">Bank of Georgia</span>
+								<p>
+									• 2nd place out of 120 teams  
+									<br>• Created recommender system algorithm using SOTA deep learning algorithms.
+									<br> <a href="https://bm.ge/ka/article/saqartvelos-bankis-data-challenge-is-pirveli-seriis-gamarjvebulebicnobilia/112640">Article</a>
+								</p>
+							</div>
+						</div>
+
+						<div class="resume-wrap d-flex ftco-animate">
+							<div class="icon d-flex align-items-center justify-content-center">
+								<span class="flaticon-ideas"></span>
+							</div>
+							<div class="text pl-3">
 								<span class="date">Dec 2019</span>
-								<h2>Winner of Datathon Competition</h2>
+								<h2>Winner of Datathon Competition (TEAM: Unofficial Intelligence)</h2>
 								<span class="position">TBC bank</span>
 								<p>
-									• Analyzed one of the insurance company dataset
-									<br>• Predicted if a customer will pay a price plan completely or not
-									<br> <a href="https://www.helloblog.ge/story/Datathon-2019">link</a>
+									• Winner in insurance business category.
+									<br>• Created a churn prediction model.
+									<br> <a href="https://www.helloblog.ge/story/Datathon-2019">Article</a>
 								</p>
 								<img src="images/Datathon.jpg" alt="Datathod" width="500" height="400">
 							</div>
@@ -357,13 +407,12 @@
 							</div>
 							<div class="text pl-3">
 								<span class="date">Mar 2019</span>
-								<h2>Price-Winner of Big Data Hackathon in San Diego</h2>
+								<h2>Winner of Big Data Hackathon in San Diego (TEAM: FAME)</h2>
 								<span class="position">Big Data Hackathon(San Diego) </span>
 								<p>
-									• Analyzed big dataset and predicted
-									<br>• Project: an application which helps people with Alzheimer’s disease to manage
-									themselves
-									<br> <a href="https://bigdataforsandiego.github.io/">link</a>
+									• Winner of Aging Independently category.
+									<br>• Predicting their activities based on specific time.
+									<br> <a href="https://bigdataforsandiego.github.io/download/SDSUBigDataHackathon2019-finalreport.pdf">Article</a>
 								</p>
 								<img src="images/big data hackathon.jpg" alt="big data hackathon" width="500"
 									height="400">
@@ -381,7 +430,12 @@
 								<p>
 									• Competition in Mathematical Logical problems
 									• <br>2000Lari scholarship
+									<br> <a href="https://cu.edu.ge/ka/schoolss/cst/cst-new-s/2016-04-04-14-07-53-3703">Article</a>
+
 								</p>
+								<img src="images/kavkasia2.jpg" alt="Logic Game competition" width="600"
+								height="400">
+								
 							</div>
 						</div>
 						<div class="resume-wrap d-flex ftco-animate">
@@ -745,12 +799,136 @@
 					<h1 class="big big-2">Blog</h1>
 					<h2 class="mb-4">My Blogs</h2>
 					<p>A Data Scientist is not the one who knows python, Sklearn, TensorFlow, etc. But who is who knows
-						how to play with the data.</p>
+						how to play with the data.
+						<br> <a href="https://medium.com/@gkeretchashvili">My medium URL</a>
+
+					</p>
+					
 				</div>
 			</div>
 			<div class="row d-flex">
-
 				<div class="col-md-4 d-flex ftco-animate">
+					<div class="blog-entry justify-content-end">
+						<a href="https://medium.com/towards-data-science/meta-ai-introduces-revolutionary-image-segmentation-model-trained-on-1-billion-masks-8f13c86a13a2"
+							class="block-20"
+							style="background-image: url('images/segmentation.png');background-size: 450px;border: medium dashed gray;">
+						</a>
+						<div class="text mt-3 float-right d-block">
+							<h3 class="heading"><a
+									href="https://medium.com/towards-data-science/meta-ai-introduces-revolutionary-image-segmentation-model-trained-on-1-billion-masks-8f13c86a13a2">Meta AI Introduces Revolutionary Image Segmentation Model Trained on 1 Billion Masks</a>
+							</h3>
+							<div class="d-flex align-items-center mb-3 meta">
+								<p class="mb-0">
+									<span class="mr-2">April 7, 2023</span>
+									<!-- <a href="#" class="mr-2">Gurami</a> -->
+									<!-- <a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a> -->
+								</p>
+							</div>
+							<p>Build segmentation model using Segment Anything
+							</p>
+						</div>
+					</div>
+				</div>
+
+					<div class="col-md-4 d-flex ftco-animate">
+						<div class="blog-entry justify-content-end">
+							<a href="https://medium.com/towards-data-science/how-to-deploy-machine-learning-models-end-to-end-dog-breed-identification-project-5689457d8973"
+								class="block-20"
+								style="background-image: url('images/dogs.png');background-size: 450px;border: medium dashed gray;">
+							</a>
+							<div class="text mt-3 float-right d-block">
+								<h3 class="heading"><a
+										href="https://medium.com/towards-data-science/how-to-deploy-machine-learning-models-end-to-end-dog-breed-identification-project-5689457d8973">How to Deploy Machine Learning models? End-to-End Dog Breed Identification Project!
+									</a>
+								</h3>
+								<div class="d-flex align-items-center mb-3 meta">
+									<p class="mb-0">
+										<span class="mr-2">April 3, 2023</span>
+										<!-- <a href="#" class="mr-2">Gurami</a> -->
+										<!-- <a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a> -->
+									</p>
+								</div>
+								<p>Deploy DL classifier model on the web using Steamlit.
+								</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-4 d-flex ftco-animate">
+						<div class="blog-entry justify-content-end">
+							<a href="https://medium.com/towards-data-science/how-to-convince-your-boss-to-trust-your-ml-dl-models-671f707246a8"
+								class="block-20"
+								style="background-image: url('images/explainability.png');background-size: 450px;border: medium dashed gray;">
+							</a>
+							<div class="text mt-3 float-right d-block">
+								<h3 class="heading"><a
+										href="https://medium.com/towards-data-science/how-to-convince-your-boss-to-trust-your-ml-dl-models-671f707246a8">How to Convince Your Boss to Trust Your ML/DL Models
+
+									</a>
+								</h3>
+								<div class="d-flex align-items-center mb-3 meta">
+									<p class="mb-0">
+										<span class="mr-2">September 15, 2022</span>
+										<!-- <a href="#" class="mr-2">Gurami</a> -->
+										<!-- <a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a> -->
+									</p>
+								</div>
+								<p>Explain your ML/DL to others.
+								</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-4 d-flex ftco-animate">
+						<div class="blog-entry justify-content-end">
+							<a href="https://medium.com/towards-data-science/how-to-improve-any-ml-dl-performance-by-10-easily-90dbbd01a4b3"
+								class="block-20"
+								style="background-image: url('images/hyper.gif');background-size: 450px;border: medium dashed gray;">
+							</a>
+							<div class="text mt-3 float-right d-block">
+								<h3 class="heading"><a
+										href="https://medium.com/towards-data-science/how-to-improve-any-ml-dl-performance-by-10-easily-90dbbd01a4b3">How to Improve Any ML/DL Performance by 10% Easily
+
+
+									</a>
+								</h3>
+								<div class="d-flex align-items-center mb-3 meta">
+									<p class="mb-0">
+										<span class="mr-2">April 15, 2022</span>
+										<!-- <a href="#" class="mr-2">Gurami</a> -->
+										<!-- <a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a> -->
+									</p>
+								</div>
+								<p>Hypterparameter tuning using NNI.
+								</p>
+							</div>
+						</div>
+					</div>
+
+					<div class="col-md-4 d-flex ftco-animate">
+						<div class="blog-entry justify-content-end">
+							<a href="https://medium.com/towards-data-science/how-to-deploy-machine-learning-models-601f8c13ff45"
+								class="block-20"
+								style="background-image: url('images/deplot_model.gif');background-size: 450px;border: medium dashed gray;">
+							</a>
+							<div class="text mt-3 float-right d-block">
+								<h3 class="heading"><a
+										href="https://medium.com/towards-data-science/how-to-deploy-machine-learning-models-601f8c13ff45">How to Deploy Machine Learning Models
+									</a>
+								</h3>
+								<div class="d-flex align-items-center mb-3 meta">
+									<p class="mb-0">
+										<span class="mr-2">December 15, 2021</span>
+										<!-- <a href="#" class="mr-2">Gurami</a> -->
+										<!-- <a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a> -->
+									</p>
+								</div>
+								<p>Deploy ML/DL on the web using streamlit
+								</p>
+							</div>
+						</div>
+					</div>
+
+
+				<div class="col-md-4 d-flex ftco-animate2">
 					<div class="blog-entry justify-content-end">
 						<a href="https://towardsdatascience.com/regression-analysis-for-beginners-using-tree-based-methods-2b65bd193a7"
 							class="block-20"
@@ -774,6 +952,7 @@
 						</div>
 					</div>
 				</div>
+
 				<div class="col-md-4 d-flex ftco-animate">
 					<div class="blog-entry justify-content-end">
 						<a href="https://towardsdatascience.com/fish-weight-prediction-regression-analysis-for-beginners-part-1-8e43b0cb07e"
@@ -939,7 +1118,7 @@
 				<div class="col-md">
 					<div class="ftco-footer-widget mb-4">
 						<h2 class="ftco-heading-2">About</h2>
-						<p>I am highly motivated AI enthusiast</p>
+						<p>I am highly motivated AI engineer</p>
 						<ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
 							<!-- <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li> -->
 							<li class="ftco-animate"><a href="https://www.linkedin.com/in/guram-keretchashvili/"><span
